--- a/requirements.txt
+++ b/requirements.txt
@@ -98,7 +98,7 @@ scipy
 simplegeneric==0.8.1
 six==1.11.0
 tenacity==4.4.0
-#tensorflow-gpu==1.3.0
+tensorflow-gpu==1.3.0
 #tensorflow-tensorboard==0.1.8
 tinytag==0.18.0
 tqdm==4.19.2
