--- a/requirements.txt
+++ b/requirements.txt
@@ -45,11 +45,11 @@ google-api-core==1.1.2
 google-resumable-media==0.3.0
 googleapis-common-protos==1.5.3
 grpc-google-iam-v1==0.11.4
-grpcio
+grpcio==1.6.3
 html5lib==0.9999999
 httplib2==0.10.3
 idna==2.6
-ipdb
+ipdb==0.10.3
 ipython==6.2.1
 ipython-genutils==0.2.0
 iso8601==0.1.12
@@ -59,15 +59,15 @@ jedi==0.11.0
 Jinja2==2.9.6
 joblib==0.11
 librosa==0.5.1
-llvmlite
+llvmlite==0.20.0
 m3u8==0.3.3
 Markdown==2.6.9
-MarkupSafe==2.1.2
+MarkupSafe==1.0
 matplotlib==2.1.0
 monotonic==1.3
 nltk==3.2.5
-numba
-numpy
+numba==0.35.0
+numpy==1.13.3
 oauth2client==3.0.0
 parso==0.1.0
 pexpect==4.2.1
@@ -93,8 +93,8 @@ pytz==2017.2
 requests==2.18.4
 resampy==0.2.0
 rsa==3.4.2
-scikit-learn
-scipy
+scikit-learn==0.19.0
+scipy==0.19.1
 simplegeneric==0.8.1
 six==1.11.0
 tenacity==4.4.0
